final logic for constructor.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     <div class="jumbotron">
     <h1>Pizza Palooza</h1>
   </div>
-
       <h3>Select Toppings:</h3>
       <form id="topping_choices">
         <div class="form-group">
           <h4>Choose your toppings:</h4>
-        <input type="checkbox" name="topping-choices" value="cheese">Cheese<br>
-        <input type="checkbox" name="topping-choices" value="olives">Olives<br>
-        <input type="checkbox" name="topping-choices" value="artichokes">Artichokes<br>
-        <input type="checkbox" name="topping-choices" value="anchovy">Anchovies<br>
-        <input type="checkbox" name="topping-choices" value="roasted garlic">Roasted Garlic<br>
+        <input type="checkbox" name="topping-choices" value="Cheese">Cheese<br>
+        <input type="checkbox" name="topping-choices" value="Olives">Olives<br>
+        <input type="checkbox" name="topping-choices"value="Artichokes">Artichokes<br>
+        <input type="checkbox" name="topping-choices" value="Anchovies">Anchovies<br>
+        <input type="checkbox" name="topping-choices" value="Roasted garlic">Roasted Garlic<br>
       </div>
 
       <h3>Select Size:</h3>
