erased js re-added.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="jumbotron">
     <h1>Pizza Palooza</h1>
   </div>
+    <form id="topping_choices">
       <h3>Select Toppings:</h3>
-      <form id="topping_choices">
+
         <div class="form-group">
           <h4>Choose your toppings:</h4>
         <input type="checkbox" name="topping-choices" value="Cheese">Cheese<br>
@@ -45,15 +46,13 @@
           </label>
           <br>
           <button type="submit" class="btn">Submit Order</button>
-      </div
+      </div>
 
     </form>
+    <div id="finalPrice">
+    </div>
 
-    <span id="finalPrice">
 
-      <h3>Your final price is:</h3>
-    </span>
-  </form>
   </div>
 </body>
 
